# lvm

./: .editorconfig  .eslintignore  .gitignore  .prettierignore  AGENTS.md  Cargo.toml  README.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
lvm-core/: Cargo.toml
lvm-core/src/: lib.rs
lvm-core/src/config/: get.rs  init.rs  mod.rs
lvm-core/src/enums/: path.rs
lvm-core/src/files/: get.rs
lvm-core/src/path/: get.rs
shim/: Cargo.toml
shim/src/: lib.rs  main.rs  path_inject.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/core/: dto.rs  manager.rs  mod.rs
src/api/: tauri.ts
src/app/: App.tsx  main.css  main.tsx
src/app/routes/: index.tsx
src/core/config/: env.ts
src/core/constants/: enum.ts
src/core/types/: common.ts
src/data/: t.json
src/features/i18n/: index.ts
src/features/theme/: ThemeProvider.tsx  themeSlice.ts
src/hooks/: useDownload.ts
src/i18n/: index.ts
src/i18n/locales/: zh.json
src/layouts/: DefaultLayout.tsx  MenuLayout.tsx  themeProvider.tsx
src/layouts/BasicLayout/: Sider.tsx  index.tsx
src/mock/: config.ts  handlers.ts  util.ts  verison.ts  version.ts
src/pages/: error.tsx  python.tsx  setting.tsx
src/pages/components/: IconFont.ts  VersionTable.tsx
src/pages/settings/: theme.tsx
src/routers/: router.tsx
src/shared/components/: IconFont.ts  VersionTable.tsx
src/store/: index.ts  themeSlice.ts
src/theme/: ThemeProvider.tsx
src/utils/: store.ts  tauriStore.ts
(+30 files in other folders)
