[package]
name = "shim"
version = "0.1.0"
edition = "2024"

[lib]
name = "shim"
path = "src/lib.rs"   # 指定 library crate

[dependencies]
dirs = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3.9", features = ["winuser"] }
lvm-core = { path = "../lvm-core" }

[target.'cfg(windows)'.dependencies]
winreg = "0.10"